# moveit_handson

./: .gitignore  README.md
docker/: Dockerfile  Readme.md  install_docker.sh
handson_description/: CMakeLists.txt  package.xml
handson_description/launch/: visualize_ur5.launch
handson_description/urdf/: ilc_platform.urdf.xacro  ur5_hitbot_with_ilc_platform.urdf.xacro
handson_description/urdf/hitbot/: hitbot.gazebo.xacro  hitbot.urdf.xacro
handson_example/: CMakeLists.txt  package.xml
handson_example/launch/: draw_x.launch  pick_place.launch  ur5_moveit_planning_execution.launch
handson_example/src/: box_pick.cpp  draw_x.cpp  experiment.cpp  fixed_position_pick_place.cpp
handson_gazebo/: CMakeLists.txt  package.xml
handson_gazebo/config/: controllers.yaml
handson_gazebo/launch/: handson_control.launch  handson_gazebo.launch
ur5_hitbot_ilc_platform_moveit_config/: .setup_assistant  package.xml
ur5_hitbot_ilc_platform_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5_hitbot_with_ilc_platform.srdf
ur5_hitbot_ilc_platform_moveit_config/launch/: demo.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  ros_controllers.launch  trajectory_execution.launch.xml
