<?xml version="1.0"?>

<!--
Copyright (c) 2018 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<package format="2">
  <name>handson_gazebo</name>
  <version>0.1.0</version>
  <description>Package for launching the robot in gazebo</description>

  <maintainer email="yu.yan@intel.com">Yu Yan</maintainer>
  <maintainer email="sharron.liu@intel.com">Sharron Liu</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/RoboticsYY/moveit_handson.git</url>
  <url type="repository">https://github.com/RoboticsYY/moveit_handson.git</url>
  <url type="bugtracker">https://github.com/RoboticsYY/moveit_handson.git</url>
  <author email="yu.yan@intel.com">Yu Yan</author>
  <author email="sharron.liu@intel.com">Sharron Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>handson_description</exec_depend>

</package>